# AiluEngine

./: .clang-format  .gitignore  .gitmodules  AiluEngine.sln  AiluPropertySheet.props  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  desktop.ini
AiluHeadTool/: AiluHeadTool.cpp  AiluHeadTool.h  CMakeLists.txt  NamespaceTracker.h  Test.gen.h  Test.h  Timer.h  TypeInfo.h  TypeRegister.cpp  main.cpp
AiluHeadTool/template/: head_generated_template.txt
Editor/: CMakeLists.txt  Editor.cpp  Editor.rc  Editor.vcxproj  Editor.vcxproj.filters  EditorConfig.ini  EditorConfig.json  EngineConfig.ini  EngineConfig.json  Material.almat  dock_layout.json  imgui.ini
Editor/Inc/: EditorApp.h
Editor/Inc/Common/: EditorStyle.h  Selection.h  TransformGizmo.h  Undo.h
Editor/Inc/Dock/: DockManager.h  DockStyle.h  DockWindow.h
Editor/Inc/Render/: AssetPreviewGenerator.h  CommonRenderPipeline.cpp  CommonRenderPipeline.h  PickPass.h
Editor/Inc/Widgets/: AnimClipEditor.h  AssetBrowser.h  BlendSpaceEditor.h  Common.h  CommonTextureWidget.h  CommonView.h  EditorLayer.h  EnvironmentSetting.h  ImGuiLayer.h  ImGuiWidget.h  InputLayer.h  ObjectDetail.h  OutputLog.h  PlaceActors.h  ProfileWindow.h  RenderGraphDebugger.h  RenderView.h  SceneLayer.h  WorldOutline.h
Editor/Res/UI/: EditorStyle.json  main_view.json  main_widget.json  title_bar.json
Editor/Src/: EditorApp.cpp  EditorMain.cpp
Editor/Src/Common/: TransformGizmo.cpp  Undo.cpp
Editor/Src/Dock/: DockManager.cpp  DockWindow.cpp
Editor/Src/Render/: AssetPreviewGenerator.cpp  CommonRenderPipeline.cpp  PickPass.cpp
Editor/Src/Widgets/: AnimClipEditor.cpp  AssetBrowser.cpp  AssetTable.cpp  BlendSpaceEditor.cpp  CommonTextureWidget.cpp  CommonView.cpp  EditorLayer.cpp  EnvironmentSetting.cpp  ImGUILayer.cpp  ImguiWidget.cpp  InputLayer.cpp  ObjectDetail.cpp  OutputLog.cpp  PlaceActors.cpp  ProfileWindow.cpp  RenderGraphDebugger.cpp  RenderView.cpp  SceneLayer.cpp  WorldOutline.cpp
Engine/: Ailu.cpp  Ailu.h  CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  after_build.bat  default.almap  log.txt  palace.almap  post_build_script.bat  pre_build_script.bat
Engine/Ext/: d3dx12.h  miniz.cpp
Engine/Ext/dds_loader/: DDSTextureLoader12.cpp  DDSTextureLoader12.h
Engine/Ext/imnodes/: imnodes.cpp  imnodes.h  imnodes_internal.h
Engine/Ext/msdf/: charset.txt  gen.bat
Engine/Ext/stb/: stb_image_write.h
Engine/Inc/: GlobalMarco.h  pch.h
Engine/Inc/Animation/: AnimationSystem.h  BlendSpace.h  Clip.h  CrossFade.h  Curve.hpp  Pose.h  Skeleton.h  Solver.h  Track.hpp  TransformTrack.h
Engine/Inc/Objects/: Actor.h  CameraComponent.h  CommonActor.h  Component.h  JsonArchive.h  LightComponent.h  LightProbeComponent.h  MemberAccessor.h  Object.h  ReflectData.h  ReflectTemplate.h  SceneActor.h  Serialize.h  SerializeSpecializations.h  StaticMeshComponent.h  TransformComponent.h  Type.h
Engine/Inc/Physics/: Collision.h  PhysicsSystem.h
Engine/Inc/Platform/: ImGuiDX12Renderer.h  WinInput.h  WinWindow.h
Engine/Inc/Render/: AlgFormat.h  Buffer.h  CBuffer.h  Camera.h  CommandBuffer.h  CoreType.h  Font.h  FrameResource.h  GfxCommand.h  Gizmo.h  GpuResource.h  GraphicsContext.h  GraphicsPipelineState.h  GraphicsPipelineStateObject.h  ImGuiRenderer.h  Material.h  Mesh.h  PipelineState.h  RenderCommand.h  RenderConstants.h  RenderPipeline.h  RenderQueue.h  Renderer.h  RendererAPI.h  RenderingData.h  ResourcePool.h  Shader.h  ShaderInterop.h  TextRenderer.h  Texture.h  ltc_lut.hpp
Engine/Inc/Scene/: Component.h  Entity.hpp  RenderSystem.h  Scene.h
Engine/Inc/UI/: Basic.h  Canvas.h  ColorPicker.h  Container.h  DragDrop.h  DrawerBlock.h  InteractionZone.h  TextRenderer.h  UIElement.h  UIFramework.h  UILayer.h  UILayout.h  UIRenderer.h  UIStyle.h  Widget.h
Engine/Res/: NewSceneDefault_albedo.alasset  NewSceneDefault_emissive.alasset  NewSceneDefault_normal.alasset  NewSceneMaterial_MR.alasset  Shaderstest_new_shader.shader  assetdb.alasset  test.blend  test.blend1
Engine/Res/AnimClips/: Breathing Idle.fbx  RunningM.fbx  Running_Source.fbx  SimpleAnim.alasset  Sk_YBot.alasset  Walking.fbx  anim_run.alasset  anim_walking.alasset  idle.fbx  ik_test.fbx  ik_test_leg_mesh.alasset  leg_mesh.alasset
Engine/Res/Icons/: 3d.alasset  area_light.alasset  camera.alasset  directional_light.alasset  file.alasset  folder.alasset  image.alasset  light_probe.alasset  material.alasset  point_light.alasset  scene.alasset  shader.alasset  spot_light.alasset
Engine/Res/Materials/: BoneWeight.almat  CustomSkyBox.almat  MAT_Cloud.alasset  MAT_Red.alasset  M_Default.alasset  Role.almat  StandardPBR.alasset  StandardPBR.almat  StandardPBR_new.alasset  StandardPBR_new.almat  WireFrame.alasset  WireFrame_new.alasset  WireFrame_new.almat  aa.almat  grass.almat  test.alasset
Engine/Res/Meshs/: DamagedHelmet.fbx  Tree_Songshu02.FBX  anim.fbx  anim0.fbx  capsule.alasset  capsule.fbx  cone.alasset  cone.fbx  cube.alasset  cube.fbx  cylinder.alasset  cylinder.fbx  gizmo.fbx  monkey.alasset  monkey.fbx  one_bone.fbx  plane.alasset  plane.fbx  skybox.fbx  space_ship.fbx  sphere.alasset  sphere.fbx  stone.fbx  terrain_plane.alasset  torus.alasset  torus.fbx  two_bone.fbx
Engine/Res/NewScene/: DamagedHelmet.fbx  DamagedHelmet.fbxnode_damagedHelmet_-6514.alasset  Default_albedo.alasset  Default_emissive.alasset  Default_normal.alasset  MAT_Plane.almat  MAT_RoleBody.almat  MAT_RoleHair.almat  Material_MR.alasset  Material_MR.almat  Tex.alasset  default_scene.almap  new_scene.almap  node_damagedHelmet_-6514.alasset  role.fbx  sample.blend  sample.blend1
Engine/Res/Scene/: test.almap
Engine/Res/ScreenGrab/: light probe_prefilter_cubemap_kNegativeX_0.exr  light probe_prefilter_cubemap_kNegativeY_0.exr  light probe_prefilter_cubemap_kNegativeZ_0.exr  light probe_prefilter_cubemap_kPositiveX_0.exr  light probe_prefilter_cubemap_kPositiveY_0.exr  (+1 more)
Engine/Res/Shaders/: PureColor.hlsl  (+58 more)
Engine/inc/: ailu.h  global_marco.h
Engine/src/: ailu.cpp
Test/: CMakeLists.txt  Test.cpp  Test.h  Test.vcxproj  Test.vcxproj.filters  core.math.aabb.cpp  core.math.aabb.ixx
(+443 files in other folders)
